chore: address some sonar issues